--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 	
 		<p>
 		In October 2021, I co-organized the Satellite Symposium 
-		<a href="https://www.delabaysrobin.site/ccs-satellite" style="color:rgb(100,25,60);">Data-based Diagnosis of Networked Dynamical Systems</a> 
+		<a href="./ccs-satellite" style="color:rgb(100,25,60);">Data-based Diagnosis of Networked Dynamical Systems</a> 
 		at the 
 		<a href="https://ccs2021.univ-lyon1.fr" target="_blank">Conference on Complex Systems</a>
 		in Lyon, with L. Pagnier and M. Tyloo. 
