changed internal links

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 		<a href="https://ccs2021.univ-lyon1.fr" target="_blank">Conference on Complex Systems</a>
 		in Lyon, with L. Pagnier and M. Tyloo. 
 		More information can be found
-		<a href="https://www.delabaysrobin.site/ccs-satellite">here</a>.
+		<a href="./ccs-satellite">here</a>.
 		</p>
 
 		<p>
