--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			In 2020, I have been granted a Postdoc.Mobility grant from the Swiss National Science Foundation. 
 			This funding will allow me to work for two years in the group of 
 			<a href="https://motion.me.ucsb.edu/group.html" target="_blank">Prof. Francesco Bullo</a> 
-			at the University of California at Santa Barbara.
+			at the University of California in Santa Barbara.
 		</p>
 
 		<p class="text">
@@ -289,7 +289,7 @@
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd>
+				<rd>R. Delabays</rd>,
 				<i>ADGenerator: Authors Distribution Generator (v1.0)</i>, Zenodo (2022).
 				<a href="https://doi.org/10.5281/zenodo.6030303" target="_blank">10.5281/zenodo.6030303</a>
 
@@ -426,7 +426,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 19th, 2021.
+				Last updated on March 22nd, 2022.
 				<br><br><br>
 			</p>
 		</div>
