--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
 				<br><rd>Poster:</rd> <a href="docs/conferences/KlosterSeeon17.pdf" target="_blank" class="publication">Topologically Protected Loop Flows in High Voltage AC Power Grids</a>.
 
 			<li>
-				<b>Feb. 5 - 9, 2017:</b> Future Electric Power Systems, Champ&eactue;ry, Switzerland.
+				<b>Feb. 5 - 9, 2017:</b> Future Electric Power Systems, Champ&eacute;ry, Switzerland.
 				<br><rd>Talk:</rd> <a href="docs/conferences/Champery17.pdf" target="_blank" class="publication">Loop Flows and the Number of Power Flow Solutions in Meshed Electric Power Grids</a>.
 
 			<li>
