--- a/ccs-satellite.html
+++ b/ccs-satellite.html
@@ -67,7 +67,7 @@
 			3:20pm - <b><a href="ccs21/lokhov.html">Andrey Lokhov</a></b>, <i>Los Alamos National Laboratory, USA.</i><br>
 			3:45pm - <b><a href="ccs21/chertkov.html">Misha Chertkov</a></b>, <i>University of Arizona, USA.</i><br>
 			<i>4:15pm - Coffee break.</i><br>
-			4:45pm - <b><a href="ccs21/kutz.html">J. Nathan Kutz</a></b>, <i>Univertity of Washington, USA.</i><br>
+			4:45pm - <b><a href="ccs21/kutz.html">J. Nathan Kutz</a></b>, <i>University of Washington, USA.</i><br>
 			5:10pm - <b><a href="ccs21/vuffray.html">Marc Vuffray</a></b>, <i>Los Alamos National Laboratory, USA.</i><br>
 			5:35pm - <b><a href="ccs21/ott.html">Edward Ott</a></b>, <i>University of Maryland, USA.</i>
 		</p>
