--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Robin Delabays | Research</title>
 		<meta name="keywords" content="Robin, Delabays, Network, Dynamical Systems">
 		<meta name="author" content="Robin Delabays">
@@ -27,7 +26,7 @@
 		
 <!-- =========================== Social media links ===================== -->
 		<a href="https://publons.com/resracher/1454260/robin-delabays/">
-			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:200px;" class="socialmedia">
+			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:10%;" class="socialmedia">
 		</a>
 		<a href="https://www.researchgate.net/profile/Robin_Delabays">
 			<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;margin-right:10px;" class="socialmedia">
@@ -39,6 +38,8 @@
 			<img src="images/scholar.png" alt="Google Scholar" style="width:40px;margin-right:10px;" class="socialmedia">
 		</a>
 		
+		<br>
+		<br>
 <!-- ======================= Sections ========================== -->
 		<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
 
@@ -46,8 +47,8 @@
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
-		<img src="images/happiness.jpg" alt="RDelabays" style="width: 250px; margin-right: 200px;" align="right" hspace="20px" vspace="5px">
-		
+		<img src="images/happiness.jpg" alt="RDelabays" style="width: 250px; margin-right: 10%;" align="right" hspace="20px" vspace="5px">
+	
 		<p class="text">
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
 			<a href="https://etranselec.ch" target="_blank">Prof. Philippe Jacquod</a>.
