--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
-		<img src="images/happiness.jpg" alt="RDelabays" style="width: 250px; margin-right: 10%;" align="right" hspace="20px" vspace="5px">
+		<img src="images/happiness.jpg" alt="RDelabays" style="width: 30%; margin-right: 10%; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
 	
 		<p class="text">
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
@@ -376,9 +376,9 @@
 		<hr>
 		
 <!-- ============================= CCS 2021 ==================================== -->
+		<img src="images/ccs21.jpg" alt="CCS21" style="width:5%; max-width:125px; min-width:80px; margin-right:10%;" align="right" hspace="20px">
+		
 		<h1 id="ccs21">CCS 2021 - Satellite Symposium</h1>
-
-		<img src="images/ccs21.jpg" alt="CCS21" style="width:125px; margin-left:200px;" align="left" hspace="20px">
 	
 		<p>
 		In October 2021, I co-organized the Satellite Symposium 
@@ -402,7 +402,7 @@
 		<hr>
 		
 <!-- ============================= GeoCoW 2020 ==================================== -->
-		<img src="images/geocow.png" alt="GeoCoW" style="width:250px; margin-right:200px;" align="right" hspace="20px">
+		<img src="images/geocow.png" alt="GeoCoW" style="width:13%; max-width:250px; min-width:150px; margin-right:10%;" align="right" hspace="20px">
 
 		<h1 id="geocow20">GeoCoW 2020</h1>
 		
