--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 <!-- =========================== Social media links ===================== -->
 		<a href="https://publons.com/resracher/1454260/robin-delabays/">
-			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:10%;" class="socialmedia">
+			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:10vw;" class="socialmedia">
 		</a>
 		<a href="https://www.researchgate.net/profile/Robin_Delabays">
 			<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;margin-right:10px;" class="socialmedia">
@@ -47,7 +47,7 @@
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
-		<img src="images/happiness.jpg" alt="RDelabays" style="width: 30%; margin-right: 10%; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
+		<img src="images/happiness.jpg" alt="RDelabays" style="width: 30vw; margin-right: 10vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
 	
 		<p class="text">
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
@@ -376,7 +376,7 @@
 		<hr>
 		
 <!-- ============================= CCS 2021 ==================================== -->
-		<img src="images/ccs21.jpg" alt="CCS21" style="width:5%; max-width:125px; min-width:80px; margin-right:10%;" align="right" hspace="20px">
+		<img src="images/ccs21.jpg" alt="CCS21" style="width:5vw; max-width:125px; min-width:80px; margin-right:10vw;" align="right" hspace="20px">
 		
 		<h1 id="ccs21">CCS 2021 - Satellite Symposium</h1>
 	
@@ -402,7 +402,7 @@
 		<hr>
 		
 <!-- ============================= GeoCoW 2020 ==================================== -->
-		<img src="images/geocow.png" alt="GeoCoW" style="width:13%; max-width:250px; min-width:150px; margin-right:10%;" align="right" hspace="20px">
+		<img src="images/geocow.png" alt="GeoCoW" style="width:20vw; max-width:250px; min-width:150px; margin-right:10vw;" align="right" hspace="20px">
 
 		<h1 id="geocow20">GeoCoW 2020</h1>
 		
