--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		
 <!-- =========================== Social media links ===================== -->
 		<a href="https://publons.com/resracher/1454260/robin-delabays/">
-			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:10vw;" class="socialmedia">
+			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:15vw;" class="socialmedia">
 		</a>
 		<a href="https://www.researchgate.net/profile/Robin_Delabays">
 			<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;margin-right:10px;" class="socialmedia">
@@ -41,13 +41,44 @@
 		<br>
 		<br>
 <!-- ======================= Sections ========================== -->
-		<p><a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
+		<p><a href="#aboutme">About me</a> - <a href="#myresearch">My research</a> - <a href="#publications">Publications</a> - <a href="#ccs21">CCS 2021</a> - <a href="#geocow20">GeoCoW 2020</a></p>
 
+
+		<hr>
+		
+<!-- ======================= JPhys Complexity ================== -->
+		<h1 id="jphyscomplexity">Focus Issue: <i>Monitoring and control of complex supply systems</i></h1>
+		
+		<p class="text">
+			Since April 2022, I am a Guest Editor for <i>Journal of Physics: Complexity</i>. 
+			I am collaborating with 
+			<a href="https://scholar.google.com/citations?hl=en&user=2d7KHqsAAAAJ" target="_blank">Laurent Pagnier</a>, 
+			<a href="https://www.iai.kit.edu/english/2154_4101.php" target="_blank">Benjamin Sch&auml;fer</a>, 
+			<a href="https://www.melvyntyloo.com" target="_blank">Melvyn Tyloo</a>,
+			and
+			<a href="https://www.fz-juelich.de/iek/iek-ste/EN/AboutUs/LeitendeMitarbeiter/Witthaut/Witthaut_node.html" target="_blank">Dirk Witthaut</a>
+			on the Focus Issue 
+			<b><a href="https://iopscience.iop.org/journal/2632-072X/page/focus-on-monitoring-and-control-of-complex-supply-systems" target="_blank" class="publication">"Monitoring and control of complex supply systems"</a></b>. 
+			The topics covered are:
+			<ul>
+				<li>Complex systems state estimation;
+				<li>Network inference techniques;
+				<li>Learning and control of supply networks;
+				<li>Disturbance identification and mitigation. 
+			</ul>
+		</p>
+		
+		<p class="text">
+			I am happy to discuss any potential submission in more details. 
+			Submission deadline: <b>September 30th, 2022.</b>
+		</p>
+		
+		<hr>
 
 <!-- ======================= About me ========================== -->
 		<h1 id="aboutme">About me</h1>
 		
-		<img src="images/happiness.jpg" alt="RDelabays" style="width: 30vw; margin-right: 10vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
+		<img src="images/happiness.jpg" alt="RDelabays" style="width: 30vw; margin-right: 15vw; max-width: 250px; min-width: 150px" align="right" hspace="20px" vspace="5px">
 	
 		<p class="text">
 			After obtaining my Master's degree in Mathematics at the University of Geneva, I started a Ph.D. at the University of Applied Sciences of Western Switzerland (HES-SO) in Sion (CH), under supervision of 
@@ -92,6 +123,8 @@
 			<b>Jul. - Aug. 2019:</b> Visiting postdoc at LANL with A. Lokhov and M. Vuffray.<br>
 			<b>Dec. 2014 - May 2018:</b> PhD at HES-SO with Prof. P. Jacquod.
 		</p>
+
+		<a href="#top" class="btt">Back to top</a>
 
 
 		<hr>
@@ -376,7 +409,7 @@
 		<hr>
 		
 <!-- ============================= CCS 2021 ==================================== -->
-		<img src="images/ccs21.jpg" alt="CCS21" style="width:5vw; max-width:125px; min-width:80px; margin-right:10vw;" align="right" hspace="20px">
+		<img src="images/ccs21.jpg" alt="CCS21" style="width:5vw; max-width:125px; min-width:80px; margin-right:15vw;" align="right" hspace="20px">
 		
 		<h1 id="ccs21">CCS 2021 - Satellite Symposium</h1>
 	
@@ -402,7 +435,7 @@
 		<hr>
 		
 <!-- ============================= GeoCoW 2020 ==================================== -->
-		<img src="images/geocow.png" alt="GeoCoW" style="width:20vw; max-width:250px; min-width:120px; margin-right:10vw;" align="right" hspace="20px">
+		<img src="images/geocow.png" alt="GeoCoW" style="width:20vw; max-width:250px; min-width:120px; margin-right:15vw;" align="right" hspace="20px">
 
 		<h1 id="geocow20">GeoCoW 2020</h1>
 		
