--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on March 22nd, 2022.
+				Last updated on April 5th, 2022.
 				<br><br><br>
 			</p>
 		</div>
