--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 		<p class="text">
 			Since April 2022, I am a Guest Editor for <i>Journal of Physics: Complexity</i>. 
 			I am collaborating with 
-			<a href="https://scholar.google.com/citations?hl=en&user=2d7KHqsAAAAJ" target="_blank">Laurent Pagnier</a>, 
-			<a href="https://www.iai.kit.edu/english/2154_4101.php" target="_blank">Benjamin Sch&auml;fer</a>, 
-			<a href="https://www.melvyntyloo.com" target="_blank">Melvyn Tyloo</a>,
+			<a href="https://scholar.google.com/citations?hl=en&user=2d7KHqsAAAAJ" target="_blank">Laurent Pagnier</a> (University of Arizona), 
+			<a href="https://www.iai.kit.edu/english/2154_4101.php" target="_blank">Benjamin Sch&auml;fer</a> (Karlsruhe Institute of Technology), 
+			<a href="https://www.melvyntyloo.com" target="_blank">Melvyn Tyloo</a> (Los Alamos National Laboratory),
 			and
-			<a href="https://www.fz-juelich.de/iek/iek-ste/EN/AboutUs/LeitendeMitarbeiter/Witthaut/Witthaut_node.html" target="_blank">Dirk Witthaut</a>
+			<a href="https://www.fz-juelich.de/iek/iek-ste/EN/AboutUs/LeitendeMitarbeiter/Witthaut/Witthaut_node.html" target="_blank">Dirk Witthaut</a> (Forschungszentrum J&uuml;lich)
 			on the Focus Issue 
 			<b><a href="https://iopscience.iop.org/journal/2632-072X/page/focus-on-monitoring-and-control-of-complex-supply-systems" target="_blank" class="publication">"Monitoring and control of complex supply systems"</a></b>. 
 			The topics covered are:
