--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<hr>
 		
 <!-- ======================= JPhys Complexity ================== -->
-		<h1 id="jphyscomplexity">Focus Issue: <i>Monitoring and control of complex supply systems</i></h1>
+		<h1 id="jphyscomplexity">Journal of Physics: Complexity - Focus Issue</h1>
 		
 		<p class="text">
 			Since April 2022, I am a Guest Editor for <i>Journal of Physics: Complexity</i>. 
@@ -58,7 +58,11 @@
 			and
 			<a href="https://www.fz-juelich.de/iek/iek-ste/EN/AboutUs/LeitendeMitarbeiter/Witthaut/Witthaut_node.html" target="_blank">Dirk Witthaut</a> (Forschungszentrum J&uuml;lich)
 			on the Focus Issue 
-			<b><a href="https://iopscience.iop.org/journal/2632-072X/page/focus-on-monitoring-and-control-of-complex-supply-systems" target="_blank" class="publication">"Monitoring and control of complex supply systems"</a></b>. 
+		</p>
+		<p style="text-align:center">
+			<a href="https://iopscience.iop.org/journal/2632-072X/page/focus-on-monitoring-and-control-of-complex-supply-systems" target="_blank"><rd>Monitoring and control of complex supply systems</rd></a>.
+		</p>
+		<p class="text"> 
 			The topics covered are:
 			<ul>
 				<li>Complex systems state estimation;
@@ -415,12 +419,10 @@
 	
 		<p>
 		In October 2021, I co-organized the Satellite Symposium 
-		<a href="./ccs-satellite" style="color:rgb(100,25,60);">Data-based Diagnosis of Networked Dynamical Systems</a> 
+		<a href="./ccs-satellite"><rd>Data-based Diagnosis of Networked Dynamical Systems</rd></a> 
 		at the 
 		<a href="https://ccs2021.univ-lyon1.fr" target="_blank">Conference on Complex Systems</a>
 		in Lyon, with L. Pagnier and M. Tyloo. 
-		More information can be found
-		<a href="./ccs-satellite">here</a>.
 		</p>
 
 		<p>
@@ -440,15 +442,13 @@
 		<h1 id="geocow20">GeoCoW 2020</h1>
 		
 		<p>
-		From February 2nd to 5th, 2020, I co-organized the workshop <rd>Geometry of Complex Webs (GeoCoW)</rd> with Matthieux Jacquemet (HES-SO and UniFR) and Christian Mazza (UniFR). 
+		From February 2nd to 5th, 2020, I co-organized the workshop <a href="https://sites.google.com/view/geocow2020/home" target="_blank"><rd>Geometry of Complex Webs (GeoCoW)</rd></a> with Matthieux Jacquemet (HES-SO and UniFR) and Christian Mazza (UniFR). 
 		It took place in the nice alpine village of Les Diablerets, Switzerland.
 		</p>
 
 		<p>
 		We gathered speakers and attendees from broad backgrounds, ranging from pure mathematicians to engineers, including physicists, life scientists, and computer scientists. 
 		The aim of this workshop was to encourage people from different field to interact around the interdisciplinary topic of complex networks and see opportunities for new and rich collaborations.
-
-		All details about the event can be found <a href="https://sites.google.com/view/geocow2020/home" target="_blank">here</a>.
 		</p>
 				
 		<a href="#top" class="btt">Back to top</a>
