New Mexico talks

--- a/index.html
+++ b/index.html
@@ -341,6 +341,14 @@
 
 		<ul>
 			<li>
+				<b>Apr. 27, 2022:</b> CNLS Seminar, Los Alamos National Laboratory (NM), USA.
+				<br><rd>Talk:</rd> <a href="docs/conferences/LANL22.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
+				
+			<li>
+				<b>Apr. 20, 2022:</b> SFI Seminar, Santa Fe Institute (NM), USA.
+				<br><rd>Talk:</rd> <a href="docs/conferences/SFI22.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
+				
+			<li>
 				<b>Oct. 25 - 29, 2021:</b> Conference on Complex Systems 2021, Lyon, France.
 				<br><rd>Talk:</rd> <a href="docs/conferences/Lyon21.pdf" target="_blank" class="publication">Flow Network Problems on the n-torus with Asymmetric Couplings</a>.
 
@@ -349,7 +357,7 @@
 				<br><rd>Talk:</rd> <a href="docs/conferences/Networks21.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>.
 
 			<li>
-				<b>Jan. 11 - 15, 2021:</b> Grid Science Conference 2021, Online, hosted by Los Alamos National Lab (NM), USA.
+				<b>Jan. 11 - 15, 2021:</b> Grid Science Conference 2021, Online, hosted by Los Alamos National Laboratory (NM), USA.
 				<br><rd>Poster:</rd> <a href="docs/conferences/SantaFe21.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>.
 
 			<li>
