accepted to necsys22

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			<li>
 				<rd>R. Delabays</rd>, L. Pagnier, and M. Tyloo,
 				<a href="docs/articles/Delabays22b.pdf" target="_blank" class="publication">Locating high-frequency line disturbances with the frequency mismatch</a>,
-				submitted (2022).
+				accepted at NecSys22 (2022).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2202.08317" target="_blank">2202.08317</a></ps> 
 
 			<li>
