necsys new title

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 		<ul>
 			<li>
 				<rd>R. Delabays</rd>, L. Pagnier, and M. Tyloo,
-				<a href="docs/articles/Delabays22b.pdf" target="_blank" class="publication">Locating high-frequency line disturbances with the frequency mismatch</a>,
+				<a href="docs/articles/Delabays22b.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>,
 				accepted at NecSys22 (2022).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2202.08317" target="_blank">2202.08317</a></ps> 
 
