--- a/index.html
+++ b/index.html
@@ -327,12 +327,12 @@
 			<li>
 				<rd>R. Delabays</rd>,
 				<i>ADGenerator: Authors Distribution Generator (v1.0)</i>, Zenodo (2022).
-				<a href="https://doi.org/10.5281/zenodo.6030303" target="_blank">10.5281/zenodo.6030303</a>
+				DOI: <a href="https://doi.org/10.5281/zenodo.6030303" target="_blank">10.5281/zenodo.6030303</a>
 
 			<li>
 				<rd>R. Delabays</rd>,
 				<i>DFNSolver: Dissipative Flow Networks Solver (v1.1)</i>, Zenodo (2022).
-				<a href="https://doi.org/10.5281/zenodo.5899408" target="_blank">10.5281/zenodo.5899408</a>
+				DOI: <a href="https://doi.org/10.5281/zenodo.5899408" target="_blank">10.5281/zenodo.5899408</a>
 		</ul>
 		
 <!-- =============================== Talks and posters ========================= -->
