Added NecSys22 poster

--- a/index.html
+++ b/index.html
@@ -341,6 +341,10 @@
 
 		<ul>
 			<li>
+				<b>Jul. 5 - 7, 2022:</b> NecSys 2022, Zurich, Switzerland.
+				<br><rd>Poster:</rd> <a href="docs/conferences/Zurich22.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>.
+
+			<li>
 				<b>Apr. 27, 2022:</b> CNLS Seminar, Los Alamos National Laboratory (NM), USA.
 				<br><rd>Talk:</rd> <a href="docs/conferences/LANL22.pdf" target="_blank" class="publication">From undirected to directed diffusive networks of dynamical agents</a>.
 				
