--- a/index.html
+++ b/index.html
@@ -341,6 +341,10 @@
 
 		<ul>
 			<li>
+				<b>Jul. 13 - 15, 2022:</b> Autonomous Energy Systems Workshop, NREL, Golden (CO), USA.
+				<br><rd>Poster:</rd> <a href="docs/conferences/NREL22.pdf" target="_blank" class="publication">Locating the source of forced oscillations: A system-agnostic approach</a>.
+
+			<li>
 				<b>Jul. 5 - 7, 2022:</b> NecSys 2022, Zurich, Switzerland.
 				<br><rd>Poster:</rd> <a href="docs/conferences/Zurich22.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>.
 
@@ -470,7 +474,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on April 5th, 2022.
+				Last updated on July 14th, 2022.
 				<br><br><br>
 			</p>
 		</div>
