adding Quant. Sci. Studies and NecSys papers

--- a/index.html
+++ b/index.html
@@ -185,28 +185,30 @@
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd>, L. Pagnier, and M. Tyloo,
-				<a href="docs/articles/Delabays22b.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>,
-				accepted at NecSys22 (2022).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2202.08317" target="_blank">2202.08317</a></ps> 
-
-			<li>
 				<rd>R. Delabays</rd>, S. Jafarpour, and F. Bullo,
 				<a href="docs/articles/Delabays22.pdf" target="_blank" class="publication">Multistability and Paradoxes in Lossy Oscillator Networks</a>,
 				submitted (2022).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2202.02439" target="_blank">2202.02439</a></ps>
-			
-			<li>
-				<rd>R. Delabays</rd> and M. Tyloo, 
-				<a href="docs/articles/Delabays20a.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of publications within scientific journals</a>, 
-				under preparation (2020). 
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2011.05703" target="_blank">2011.05703</a></ps>
 		</ul>
 
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				<rd>R. Delabays</rd> and M. Tyloo,
+				<a href="docs/articles/Delabays22c.pdf" target="_blank" class=publication">Heavy-tailed distribution of the number of papers within scientific journals</a>,
+				Quant. Sci. Studies, 1-17 (2022).
+				<br><ps>DOI: <a href="https://doi.org/10.1162/qss_a_00201" target="_blank">10.1162/qss_a_00201</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2011.05703" target="_blank">2011.05703</a>
+
+			<li>
+				<rd>R. Delabays</rd>, L. Pagnier, and M. Tyloo,
+				<a href="docs/articles/Delabays22b.pdf" target="_blank" class="publication">Locating fast-varying line disturbances with the frequency mismatch</a>,
+				IFAC-PapersOnLine <b>55</b>, 270 (2022).
+				<br><ps>DOI: <a href="https://doi.org/10.1016/j.ifacol.2022.07.271" target="_blank">10.1016/j.ifacol.2022.07.271</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2202.08317" target="_blank">2202.08317</a>
+
 			<li>
 				M. Tyloo, <rd> R. Delabays</rd>, and P. Jacquod,
 				<a href="docs/articles/Tyloo21a.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>,
@@ -474,7 +476,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on July 14th, 2022.
+				Last updated on August 6th, 2022.
 				<br><br><br>
 			</p>
 		</div>
