--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		<ul>
 			<li>
 				<rd>R. Delabays</rd> and M. Tyloo,
-				<a href="docs/articles/Delabays22c.pdf" target="_blank" class=publication">Heavy-tailed distribution of the number of papers within scientific journals</a>,
+				<a href="docs/articles/Delabays22c.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of papers within scientific journals</a>,
 				Quant. Sci. Studies, 1-17 (2022).
 				<br><ps>DOI: <a href="https://doi.org/10.1162/qss_a_00201" target="_blank">10.1162/qss_a_00201</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2011.05703" target="_blank">2011.05703</a>
