Updated capitalization of titles.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 			<li>
 				M. Tyloo, <rd> R. Delabays</rd>, and P. Jacquod,
-				<a href="docs/articles/Tyloo21a.pdf" target="_blank" class="publication">Reconstructing Network Structures from Partial Measurements</a>,
+				<a href="docs/articles/Tyloo21a.pdf" target="_blank" class="publication">Reconstructing network structures from partial measurements</a>,
 				Chaos <b>31</b>, 103117 (2021).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/5.0058739" target="_blank">10.1063/5.0058739</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/2007.16136" target="_blank">2007.16136</a>
@@ -225,49 +225,49 @@
 
 			<li>
 				<rd> R. Delabays</rd>, L. Pagnier, and M. Tyloo,
-				<a href="docs/articles/Delabays21b.pdf" target="_blank" class="publication">Locating Line and Node Disturbances in Networks of Diffusively Coupled Dynamical Agents</a>,
+				<a href="docs/articles/Delabays21b.pdf" target="_blank" class="publication">Locating line and node disturbances in networks of diffusively coupled dynamical agents</a>,
 				New J. Phys. <b>23</b>, 043037 (2021).
 				<br><ps>DOI: <a href="https://doi.org/10.1088/1367-2630/abf54b" target="_blank">10.1088/1367-2630/abf54b</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/2003.08786" target="_blank">2003.08786</a>
 
 			<li>
 				M. Tyloo and <rd> R. Delabays</rd>,
-				<a href="docs/articles/Tyloo21b.pdf" target="_blank" class="publication">System Size Identification from Sinusoidal Probing in Diffusive Complex Networks</a>,
+				<a href="docs/articles/Tyloo21b.pdf" target="_blank" class="publication">System size identification from sinusoidal probing in diffusive complex networks</a>,
 				J. Phys. Complex. <b>2</b>, 025016 (2021).
 				<br><ps>DOI: <a href="https://doi.org/10.1088/2632-072X/abebd3" target="_blank">10.1088/2632-072X/abebd3</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/2009.03824" target="_blank">2009.03824</a>
 
 			<li>
 				A. Reggio, <rd> R. Delabays</rd>, and P. Jacquod,
-				<a href="docs/articles/Reggio20a.pdf" target="_blank" class="publication">Clusterization and Phase Diagram of the Bimodal Kuramoto Model with Bounded Confidence</a>,
+				<a href="docs/articles/Reggio20a.pdf" target="_blank" class="publication">Clusterization and phase diagram of the bimodal Kuramoto model with bounded confidence</a>,
 				Chaos <b>30</b>, 093134 (2020).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/5.0020436" target="_blank">10.1063/5.0020436</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1906.05698" target="_blank">1906.05698</a>
 
 			<li>
 				<rd> R. Delabays</rd>,
-				<a href="docs/articles/Delabays19a.pdf" target="_blank" class="publication">Dynamical Equivalence between Kuramoto Models with First- and Higher-order Coupling</a>,
+				<a href="docs/articles/Delabays19a.pdf" target="_blank" class="publication">Dynamical equivalence between Kuramoto models with first- and higher-order coupling</a>,
 				Chaos <b>29</b>, 113129 (2019).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/1.5118941" target="_blank">10.1063/1.5118941</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1907.03699" target="_blank">1907.03699</a>
 
 			<li>
 				<rd> R. Delabays</rd>, M. Tyloo, and P. Jacquod,
-				<a href="docs/articles/Delabays19b.pdf" target="_blank" class="publication">Rate of Change of Frequency under Line Contingencies in High Voltage Electric Power Networks with Uncertainties</a>,
+				<a href="docs/articles/Delabays19b.pdf" target="_blank" class="publication">Rate of change of frequency under line contingencies in high voltage electric power networks with uncertainties</a>,
 				Chaos <b>29</b>, 103130 (2019).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/1.5115002" target="_blank">10.1063/1.5115002</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1906.05698" target="_blank">1906.05698</a>
 
 			<li>
 				M. Tyloo, <rd> R. Delabays</rd>, and P. Jacquod,
-				<a href="docs/articles/Tyloo19a.pdf" target="_blank" class="publication">Noise-Induced Desynchronization and Stochastic Escape from Equilibrium in Complex Networks</a>,
+				<a href="docs/articles/Tyloo19a.pdf" target="_blank" class="publication">Noise-induced desynchronization and stochastic escape from equilibrium in complex networks</a>,
 				Phys. Rev. E <b>99</b>, 062213 (2019).
 				<br><ps>DOI: <a href="https://doi.org/10.1103/PhysRevE.99.062213" target="_blank">10.1103/PhysRevE.99.062213</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1812.09497" target="_blank">1812.09497</a>
 
 			<li>
 				D. Cimasoni and <rd> R. Delabays</rd>,
-				<a href="docs/articles/Cimasoni19a.pdf" target="_blank" class="publication">The Topological Hypothesis for Discrete Spin Models</a>,
+				<a href="docs/articles/Cimasoni19a.pdf" target="_blank" class="publication">The topological hypothesis for discrete spin models</a>,
 				J. Stat. Mech. <b>2019</b> (2019).
 				<br><ps>DOI: <a href="https://doi.org/10.1088/1742-5468/ab0c14" target="_blank">10.1088/1742-5468/ab0c14</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1811.10263" target="_blank">1811.10263</a>
@@ -281,34 +281,34 @@
 
 			<li>
 				<rd> R. Delabays</rd>, M. Tyloo, and P. Jacquod,
-				<a href="docs/articles/Delabays17a.pdf" target="_blank" class="publication">The Size of the Sync Basin Revisited</a>,
+				<a href="docs/articles/Delabays17a.pdf" target="_blank" class="publication">The size of the sync basin revisited</a>,
 				Chaos <b>27</b>, 103109 (2017).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/1.4986156" target="_blank">10.1063/1.4986156</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1706.00344" target="_blank">1706.00344</a>
 
 			<li>
 				T. Coletta, <rd> R. Delabays</rd>, and P. Jacquod,
-				<a href="docs/articles/Coletta17a.pdf" target="_blank" class="publication">Finite-size Scaling in the Kuramoto Model</a>,
+				<a href="docs/articles/Coletta17a.pdf" target="_blank" class="publication">Finite-size scaling in the Kuramoto model</a>,
 				Phys. Rev. E <b>95</b>, 103117 (2017).
 				<br><ps>DOI: <a href="https://doi.org/10.1103/PhysRevE.95.042207" target="_blank">10.1103/PhysRevE.95.042207</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1612.07031" target="_blank">1612.07031</a>
 
 			<li>
 				<rd> R. Delabays</rd>, T. Coletta, and P. Jacquod,
-				<a href="docs/articles/Delabays17b.pdf" target="_blank" class="publication">Multistability of Phase-Locking in Equal-Frequency Kuramoto Models on Planar Graphs</a>,
+				<a href="docs/articles/Delabays17b.pdf" target="_blank" class="publication">Multistability of phase-locking in equal-frequency Kuramoto models on planar graphs</a>,
 				J. Math. Phys. <b>58</b>, 032703 (2017).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/1.4978697" target="_blank">10.1063/1.4978697</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1609.02359" target="_blank">1609.02359</a>
 			<li>
 				T. Coletta, <rd> R. Delabays</rd>, I. Adagideli, and P. Jacquod,
-				<a href="docs/articles/Coletta16a.pdf" target="_blank" class="publication">Topologically Protected Loop Flows in High Voltage AC Power Grids</a>,
+				<a href="docs/articles/Coletta16a.pdf" target="_blank" class="publication">Topologically protected loop flows in high voltage AC power grids</a>,
 				New. J. Phys. <b>18</b>, 103042 (2016).
 				<br><ps>DOI: <a href="https://doi.org/10.1088/1367-2630/18/10/103042" target="_blank">10.1088/1367-2630/18/10/103042</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1605.07925" target="_blank">1605.07925</a>
 
 			<li>
 				<rd> R. Delabays</rd>, T. Coletta, and P. Jacquod,
-				<a href="docs/articles/Delabays16a.pdf" target="_blank" class="publication">Multistability of Phase-Locking and Topological Winding Numbers in Locally Coupled Kuramoto Models on Single-Loop Networks</a>,
+				<a href="docs/articles/Delabays16a.pdf" target="_blank" class="publication">Multistability of phase-locking and topological winding numbers in locally coupled Kuramoto models on single-loop networks</a>,
 				J. Math. Phys. <b>57</b>, 032701 (2016).
 				<br><ps>DOI: <a href="https://doi.org/10.1063/1.4943296" target="_blank">10.1063/1.4943296</a>
 				 - <ps>arXiv: <a href="https://arxiv.org/abs/1512.04266" target="_blank">1512.04266</a>
@@ -476,7 +476,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on August 6th, 2022.
+				Last updated on August 8th, 2022.
 				<br><br><br>
 			</p>
 		</div>
