--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 		</div>
 		
 <!-- =========================== Social media links ===================== -->
-		<a href="https://publons.com/resracher/1454260/robin-delabays/">
+		<a href="https://publons.com/resracher/1454260/robin-delabays/" target="_blank">
 			<img src="images/publons.png" alt="Publons" style="width:40px; margin-right:15vw;" class="socialmedia">
 		</a>
-		<a href="https://www.researchgate.net/profile/Robin_Delabays">
+		<a href="https://www.researchgate.net/profile/Robin_Delabays" target="_blank">
 			<img src="images/researchgate.png" alt="ResearchGate" style="width:40px;margin-right:10px;" class="socialmedia">
 		</a>
-		<a href="https://orcid.org/0000-0001-6344-1207">
+		<a href="https://orcid.org/0000-0001-6344-1207" target="_blank">
 			<img src="images/orcid.png" alt="ORCID" style="width:40px;margin-right:10px;" class="socialmedia">
 		</a>
-		<a href="https://scholar.google.com/citations?hl=en&user=Fi4dLRYAAAAJ">
+		<a href="https://scholar.google.com/citations?hl=en&user=Fi4dLRYAAAAJ" target="_blank">
 			<img src="images/scholar.png" alt="Google Scholar" style="width:40px;margin-right:10px;" class="socialmedia">
 		</a>
 		
