--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 			<p class="header">
 			<br>
 			<br>
-			ROBIN DELABAYS
-			<span style="float:right;">robindelabays@ucsb.edu</span>
+			ROBIN DELABAYS	
+			<span style="float:right;">robin.delabays@hevs.ch</span>
 			<br>
+			<i>HES-SO Valais-Wallis</i>
 			<br>
 			<br>
 			</p>
@@ -110,9 +111,15 @@
 
 		<p class="text">
 			In 2020, I have been granted a Postdoc.Mobility grant from the Swiss National Science Foundation. 
-			This funding will allow me to work for two years in the group of 
+			This funding allowed me to work for two years in the group of 
 			<a href="https://motion.me.ucsb.edu/group.html" target="_blank">Prof. Francesco Bullo</a> 
 			at the University of California in Santa Barbara.
+			We managed to extend our understanding of multistability in networks of coupled oscillators to dissipative systems.
+		</p>
+
+		<p class="text">
+			Since August 2022, I am an Assistant Professor at the School of Engineering of the University of Applied Sciences of Western Switzerland (HES-SO), in Sion (CH). 
+			I am teach mathematics young engineers and pursuing my research on the interplay between network structures and dynamical systems, with special focus on power grids.
 		</p>
 
 		<p class="text">
@@ -122,7 +129,8 @@
 
 		<h3 class="list">Recent occupations at a glance:</h3>
 		<p class="list">
-			<b>Since Oct. 2020:</b> Postdoc at UCSB with Prof. F. Bullo.<br>
+			<b>Since Aug. 2022:</b> Assistant Professor at HES-SO.<br>
+			<b>Oct. 2020 - Aug. 2022:</b> Postdoc at UCSB with Prof. F. Bullo.<br>
 			<b>Jun. 2018 - Jul. 2020:</b> Postdoc between HES-SO and ETHZ with Profs. P. Jacquod and F. D&ouml;rfler.<br>
 			<b>Jul. - Aug. 2019:</b> Visiting postdoc at LANL with A. Lokhov and M. Vuffray.<br>
 			<b>Dec. 2014 - May 2018:</b> PhD at HES-SO with Prof. P. Jacquod.
@@ -476,7 +484,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on August 8th, 2022.
+				Last updated on August 22nd, 2022.
 				<br><br><br>
 			</p>
 		</div>
