Adding details about recent research.

--- a/index.html
+++ b/index.html
@@ -166,6 +166,11 @@
 			<a href="https://www.melvyntyloo.com" target="_blank">M. Tyloo</a>,
 			we showed how the number and size of cycles in a network of dynamical agents influence the number of equilibria of the whole system. 
 			More recently, with 
+			<a href="https://motion.me.ucsb.edu/group.html" target="_blank">F. Bullo</a>
+			and
+			<a href="https://sites.engineering.ucsb.edu/~saber.jafarpour/" target="_blank">S. Jafarpour</a>, 
+			we extended the analysis of networked coupled oscillators to systems with dissipative or lossy couplings. 
+			Looking at the other side of the problem, with 
 			<a href="https://etranselec.ch" target="_blank">P. Jacquod</a>, 
 			<a href="https://scholar.google.com/citations?hl=en&user=2d7KHqsAAAAJ" target="_blank">L. Pagnier</a>, 
 			and
@@ -484,7 +489,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on August 22nd, 2022.
+				Last updated on August 25nd, 2022.
 				<br><br><br>
 			</p>
 		</div>
