Import Nat Commun.

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
 		</p>
 		
 <!-- ======================= Preprints ================================ -->
+<!--		
 		<h2>Preprints</h2>
 		
 		<ul>
@@ -203,11 +204,19 @@
 				submitted (2022).
 				<br><ps>arXiv: <a href="https://arxiv.org/abs/2202.02439" target="_blank">2202.02439</a></ps>
 		</ul>
+-->
 
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				<rd>R. Delabays</rd>, S. Jafarpour, and F. Bullo,
+				<a href="docs/articles/Delabays22d.pdf" target="_blank" class="publication">Multistability and anomalies in oscillator models of lossy power grids</a>,
+				Nat. Commun. <b>13</b>, 5238 (2022).
+				<br><ps>DOI: <a href=https://doi.org/10.1038/s41467-022-32931-8" target="_blank">10.1038/s41467-022-32931-8</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2202.02439" target="_blank">2202.02439</a>
+
 			<li>
 				<rd>R. Delabays</rd> and M. Tyloo,
 				<a href="docs/articles/Delabays22c.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of papers within scientific journals</a>,
