Added collab with Tung, Roberto, and co.

--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
 		</p>
 		
 <!-- ======================= Preprints ================================ -->
-<!--		
+		
 		<h2>Preprints</h2>
 		
 		<ul>
 			<li>
-				<rd>R. Delabays</rd>, S. Jafarpour, and F. Bullo,
-				<a href="docs/articles/Delabays22.pdf" target="_blank" class="publication">Multistability and Paradoxes in Lossy Oscillator Networks</a>,
+				T. T. Nguyen, R. C. Budzinski, F. W. Pasini, <rd>R. Delabays</rd>, J. Min&aacute;&#268;, and L. E. Muller,
+				<a href="docs/articles/Nguyen22.pdf" target="_blank" class="publication">Broadcasting solutions on multilayer networks of phase oscillators</a>,
 				submitted (2022).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2202.02439" target="_blank">2202.02439</a></ps>
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2209.05970" target="_blank">2209.05970</a></ps>
 		</ul>
--->
+
 
 <!-- =============================== Peer-reviewed ========================= -->
 		<h2>Peer-reviewed</h2>
@@ -498,7 +498,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on August 25nd, 2022.
+				Last updated on September 14th, 2022.
 				<br><br><br>
 			</p>
 		</div>
