Added talk at SIAM NS22.

--- a/index.html
+++ b/index.html
@@ -365,6 +365,10 @@
 
 		<ul>
 			<li>
+				<b>Sep. 13 - 15, 2022:</b> SIAM Network Science Workshop 2022, Online.
+				<br><rd>Talk:</rd> <a href="docs/conferences/SIAM-NS22.pdf" target="_blank" class="publication">Complex networks of lossy oscillators: Multistability, anomalies, and loop flows in power grids</a>.
+
+			<li>
 				<b>Jul. 13 - 15, 2022:</b> Autonomous Energy Systems Workshop, NREL, Golden (CO), USA.
 				<br><rd>Poster:</rd> <a href="docs/conferences/NREL22.pdf" target="_blank" class="publication">Locating the source of forced oscillations: A system-agnostic approach</a>.
 
@@ -498,7 +502,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 14th, 2022.
+				Last updated on September 15th, 2022.
 				<br><br><br>
 			</p>
 		</div>
