--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 				<rd>R. Delabays</rd>, S. Jafarpour, and F. Bullo,
 				<a href="docs/articles/Delabays22d.pdf" target="_blank" class="publication">Multistability and anomalies in oscillator models of lossy power grids</a>,
 				Nat. Commun. <b>13</b>, 5238 (2022).
-				<br><ps>DOI: <a href=https://doi.org/10.1038/s41467-022-32931-8" target="_blank">10.1038/s41467-022-32931-8</a>
+				<br><ps>DOI: <a href="https://doi.org/10.1038/s41467-022-32931-8" target="_blank">10.1038/s41467-022-32931-8</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2202.02439" target="_blank">2202.02439</a>
 
 			<li>
