--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
 		<h1 id="geocow20">GeoCoW 2020</h1>
 		
 		<p>
-		From February 2nd to 5th, 2020, I co-organized the workshop <a href="https://sites.google.com/view/geocow2020/home" target="_blank"><rd>Geometry of Complex Webs (GeoCoW)</rd></a> with Matthieux Jacquemet (HES-SO and UniFR) and Christian Mazza (UniFR). 
+		From February 2nd to 5th, 2020, I co-organized the workshop <a href="https://sites.google.com/view/geocow2020/home" target="_blank"><rd>Geometry of Complex Webs (GeoCoW)</rd></a> with Matthieu Jacquemet (HES-SO and UniFR) and Christian Mazza (UniFR). 
 		It took place in the nice alpine village of Les Diablerets, Switzerland.
 		</p>
 
