Updated deadline for JPhys Complex

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		
 		<p class="text">
 			I am happy to discuss any potential submission in more details. 
-			Submission deadline: <b>September 30th, 2022.</b>
+			Submission deadline: <b>December 31st, 2022.</b>
 		</p>
 		
 		<hr>
@@ -502,7 +502,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on September 15th, 2022.
+				Last updated on October 11th, 2022.
 				<br><br><br>
 			</p>
 		</div>
