--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			<li>
 				<rd>R. Delabays</rd> and M. Tyloo,
 				<a href="docs/articles/Delabays22c.pdf" target="_blank" class="publication">Heavy-tailed distribution of the number of papers within scientific journals</a>,
-				Quant. Sci. Studies, 1-17 (2022).
+				Quant. Sci. Studies <b>3</b>, 776 (2022).
 				<br><ps>DOI: <a href="https://doi.org/10.1162/qss_a_00201" target="_blank">10.1162/qss_a_00201</a>
 				- <ps>arXiv: <a href="https://arxiv.org/abs/2011.05703" target="_blank">2011.05703</a>
 
@@ -502,7 +502,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on October 11th, 2022.
+				Last updated on November 17th, 2022.
 				<br><br><br>
 			</p>
 		</div>
