--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
 		
 		<ul>
 			<li>
+				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
+				<a href="docs/articles/Delabays22e.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>,
+				submitted (2022).
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2211.16064" target="_blank">2211.16064</a></ps>
+
+			<li>
 				T. T. Nguyen, R. C. Budzinski, F. W. Pasini, <rd>R. Delabays</rd>, J. Min&aacute;&#269;, and L. E. Muller,
 				<a href="docs/articles/Nguyen22.pdf" target="_blank" class="publication">Broadcasting solutions on multilayer networks of phase oscillators</a>,
 				submitted (2022).
@@ -348,6 +354,11 @@
 		<h2>Softwares</h2>
 		
 		<ul>
+			<li>
+				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
+				<i>SALO: System-Agnostic Localization of Oscillatons</i>, GitHub (2022).
+				URL: <a href="https://github.com/lanl-ansi/SALO" target="_blank">github.com/lanl-ansi/SALO</a>
+
 			<li>
 				<rd>R. Delabays</rd>,
 				<i>ADGenerator: Authors Distribution Generator (v1.1)</i>, Zenodo (2022).
@@ -502,7 +513,7 @@
 		<div class="footer">
 			<p class="footer">
 				<br><br>
-				Last updated on November 17th, 2022.
+				Last updated on November 30th, 2022.
 				<br><br><br>
 			</p>
 		</div>
