--- a/index.html
+++ b/index.html
@@ -202,13 +202,7 @@
 				<rd>R. Delabays</rd>, A. Y. Lokhov, M. Tyloo, and M. Vuffray,
 				<a href="docs/articles/Delabays22e.pdf" target="_blank" class="publication">Locating the source of forced oscillations in transmission power grids</a>,
 				submitted (2022).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2211.16064" target="_blank">2211.16064</a></ps>
-
-			<li>
-				T. T. Nguyen, R. C. Budzinski, F. W. Pasini, <rd>R. Delabays</rd>, J. Min&aacute;&#269;, and L. E. Muller,
-				<a href="docs/articles/Nguyen22.pdf" target="_blank" class="publication">Broadcasting solutions on multilayer networks of phase oscillators</a>,
-				submitted (2022).
-				<br><ps>arXiv: <a href="https://arxiv.org/abs/2209.05970" target="_blank">2209.05970</a></ps>
+				<br><ps>arXiv: <a href="https://arxiv.org/abs/2211.16064" target="_blank">2211.16064</a>
 		</ul>
 
 
@@ -216,6 +210,13 @@
 		<h2>Peer-reviewed</h2>
 
 		<ul>
+			<li>
+				T. T. Nguyen, R. C. Budzinski, F. W. Pasini, <rd>R. Delabays</rd>, J. Min&aacute;&#269;, and L. E. Muller,
+				<a href="docs/articles/Nguyen23.pdf" target="_blank" class="publication">Broadcasting solutions on networked systems of phase oscillators</a>,
+				Chaos Solitons Fractals <b>168</b>, 113166 (2023).
+				<br><ps>DOI: <a href="https://doi.org/10.1016/j.chaos.2023.113166" target="_blank">10.1016/j.chaos.2023.113166</a>
+				- <ps>arXiv: <a href="https://arxiv.org/abs/2209.05970" target="_blank">2209.05970</a>
+
 			<li>
 				<rd>R. Delabays</rd>, S. Jafarpour, and F. Bullo,
 				<a href="docs/articles/Delabays22d.pdf" target="_blank" class="publication">Multistability and anomalies in oscillator models of lossy power grids</a>,
