Added Qeios review

--- a/index.html
+++ b/index.html
@@ -371,6 +371,16 @@
 				DOI: <a href="https://doi.org/10.5281/zenodo.5899407" target="_blank">10.5281/zenodo.5899407</a>
 		</ul>
 		
+<!-- =============================== Published peer reviews ==================== -->
+		<h2>Published peer reviews</h2>
+		
+		<ul>
+			<li>
+				R. West and S. Michie, 
+				<i>How many papers are published each week reporting on trials of interventions involving behavioural aspects of health?</i>, Qeios, (2023).
+				DOI: <a href="https://doi.org/10.32388/K2VMTL" target="_blank">10.32388/K2VMTL</a>
+		</ul>
+
 <!-- =============================== Talks and posters ========================= -->
 		<h2>Talks and posters</h2>
 		<p><i>All conference material is under CC-BY license.</i></p>
